--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url('../images/backpic.jpeg') ;
+    background: url('../images/backpics.jpg') ;
      /* You must set a specified height */
       background-position: center; /* Center the image */
       background-repeat: no-repeat; /* Do not repeat the image */
       background-size: cover;
-      height: 600px;
+      height: 900px;
        }
        #header-nav {
       background-color:#203C60  ;
